--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=dev --all --parallel",
+    "build": "nx run-many --target=build --all --parallel",
+    "lint": "nx run-many --target=lint --all --parallel",
+    "test": "nx run-many --target=test --all --parallel",
+    "e2e": "nx run-many --target=e2e --all --parallel",
+    "format": "nx format:check",
+    "format:write": "nx format:write"
+  },
   "private": true,
   "dependencies": {
     "@react-router/node": "^7.2.0",
